Updated featured img src

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     </header>
 
 		{% if page.image %}
-			<img class="feat-img is-hidden-mobile" src="webconfs/img/{{ page.image }}" alt="{{ page.title }} featured image" />
+			<img class="feat-img is-hidden-mobile" src="../img/{{ page.image }}" alt="{{ page.title }} featured image" />
 		{% endif %}
 
     <article class="post__content">
